@@ -20,7 +20,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            @{argLine} ${jetty.surefire.argLine} --add-opens org.eclipse.jetty.annotations/org.eclipse.jetty.annotations.resources=org.eclipse.jetty.plus
+            @{argLine} ${jetty.surefire.argLine}
+            --add-opens org.eclipse.jetty.annotations/org.eclipse.jetty.annotations.resources=org.eclipse.jetty.plus
+            --add-reads org.eclipse.jetty.annotations=org.eclipse.jetty.logging
           </argLine>
         </configuration>
       </plugin>
